css/default.css
/* base */

:root {
    color-scheme: dark light;
    --background-color: light-dark(#ffffff, #000000);
    --violet: #8000ff;
    --zara: #ff8000;
    --cato: #00ff00;
    --tron: #53B8FF;
    --boy-blue: #21cae0;
    --girl-pink: #f4c2c2;
    --enby-green: #3cff6d;
    --old-brown: #a07000;
    --goluboy: #00aaff;
    --siniy: #0050ff;
}

/* some dummy code so noir can tell there's a dark mode */
@media (prefers-color-scheme: dark) {
	:root { --never-used: 0; }
}

body {
    font-family: "Lexend Deca", sans-serif;
    background-color: var(--background-color);
    margin-left: 15vw;
    margin-right: 15vw;
}

/* core */

h1 {
    font-size: 5rem;
    margin-top: 1rem;
    margin-bottom: 0rem;
}

h2 {
    font-size: 2.5rem;
    text-align: center;
}

h3 {
    font-size: 2rem;
    text-decoration: underline;
}

h4 {
    font-size: 1.5rem;
}

/* color */

.violet {
    color: var(--violet);
}

.zara {
    color: var(--zara);
}

.cato {
    color: var(--cato);
}

.tron { /* and font, in this instance */
    font-family: "Orbitron", sans-serif;
    color: var(--tron);
}

.boy-blue {
    color: var(--boy-blue);
}

.girl-pink {
    color: var(--girl-pink);
}

.enby-green {
    color: var(--enby-green);
}

.old-brown {
    color: var(--old-brown);
}

.goluboy { /* currently unused */
    color: var(--goluboy);
}

.siniy {
    color: var(--cobalt);
}

/* font */

.program {
    font-family: "Orbitron", sans-serif;
}

.mono {
    font-family: "Cutive Mono", monospace;
}

.roman {
    font-family: "EB Garamond", serif;
}

.sleek {
    font-family: "Lexend Deca", sans-serif;
}

/* text style */

.centered {
    text-align: center;
}

.underline {
    text-decoration: underline;
}

.italic {
    font-style: italic;
}

.olink { /* obvious link */
    color: var(--tron);
    text-decoration: underline;
}

/* name title */

.first {
    /* .violet && .program */
    color: var(--violet);
    font-family: "Orbitron", sans-serif;

    /* sizing fixes */
    font-size: 4.45rem;
}

.middle {
    /* .zara && .mono */
    color: var(--zara);
    font-family: "Cutive Mono", monospace;

    /* sizing fixes */
    font-size: 5.75rem;
}

.dot {
    /* .zara && .sleek */
    color: var(--zara);
    font-family: "Lexend Deca", sans-serif;

    /* sizing fixes */
    font-size: 4.25rem;
}

.last {
    /* .cato && .roman */
    color: var(--cato);
    font-family: "EB Garamond", serif;

    /* sizing fixes */
    font-size: 5rem;
}

